--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Hack or Snooze</title>
-  <link rel="stylesheet" 
+  <link rel="stylesheet"
         href="https://www.unpkg.com/bootstrap-icons/font/bootstrap-icons.css">
   <link rel="stylesheet" href="css/site.css">
   <link rel="stylesheet" href="css/user.css">
@@ -32,7 +32,10 @@
 <!-- top navigation bar -->
 <nav>
   <div class="navbar-brand">
-    <a class="nav-link" href="#" id="nav-all">Hack or Snooze</a>
+    <a class="nav-link" href="#" id="nav-all">Hack or Snooze&nbsp;</a>
+  </div>
+  <div class="nav-left">
+    <a class="nav-link" href="#" id="nav-submit">submit</a>
   </div>
   <div class="nav-right">
     <a class="nav-link" href="#" id="nav-login">login/signup</a>
@@ -43,6 +46,27 @@
 
 <!-- area for stories (all stories, user stories, favorites) -->
 <section class="stories-container container">
+
+  <div id="add-new-story">
+    <!-- Add Story form -->
+    <form id="add-new-story-form" class="new-story-form hidden">
+      <!-- need two inputs texts, one url input -->
+      <div class="new-story-input">
+        <label for="author-name">author</label>
+        <input id="author-name" type="text" placeholder="author name">
+      </div>
+      <div class="new-story-input">
+        <label for="new-story-title">title</label>
+        <input id="new-story-title" type="text" placeholder="story title">
+      </div>
+      <div class="new-story-input">
+        <label for="new-story-url">url</label>
+        <input id="new-story-url" type="url" placeholder="story url">
+      </div>
+      <button type="submit">submit</button>
+      <hr>
+    </form>
+  </div>
 
   <!-- loading message (removed by JS after stories loaded) -->
   <div id="stories-loading-msg">Loading&hellip;</div>
