--- a/index.html
+++ b/index.html
@@ -72,7 +72,9 @@
   <div id="stories-loading-msg">Loading&hellip;</div>
 
   <!-- List of all stories -->
-  <ol id="all-stories-list" class="stories-list"></ol>
+  <ol id="all-stories-list" class="stories-list">
+
+  </ol>
 
 </section>
 
