--- a/index.html
+++ b/index.html
@@ -35,7 +35,8 @@
     <a class="nav-link" href="#" id="nav-all">Hack or Snooze&nbsp;</a>
   </div>
   <div class="nav-left">
-    <a class="nav-link" href="#" id="nav-submit">submit</a>
+    <a class="hidden nav-link" href="#" id="nav-submit">submit</a>
+    <a class="hidden nav-link" href="#" id="nav-favorites">favorites</a>
   </div>
   <div class="nav-right">
     <a class="nav-link" href="#" id="nav-login">login/signup</a>
